# kinetics-grid-ems

./: .gitignore  README.md  Update.txt
northbound_ems_gateway/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
northbound_ems_gateway/configs/: development.json  development_rootfs_lab_only.json  server_upload_wifi_template.json  site_template.json  soc_only_field_no_solar.json  soc_solis_field_rtu.json
northbound_ems_gateway/data/normalization/: curated_signal_map.json
northbound_ems_gateway/data/protocol_sources/: china_ems_northbound_register_table.xlsx  unity261pv_modbus_north_en_v1.xlsx
northbound_ems_gateway/data/register_maps/: china_ems_northbound_v1.json  unity261pv_modbus_north_v1.json
northbound_ems_gateway/deployment/docker/: Dockerfile  docker-compose.yml
northbound_ems_gateway/docs/: api_spec.md  architecture.md  auth_and_it_api_usage.md  commissioning_checklist.md  protocol_notes.md  read_only_safety_policy.md  register_map_generation.md  server_upload_https.md  storage_protection_v0_5.md  unity261pv_phase1_register_map_analysis.md  v1_10_lower_cutoff_recovery.md  v1_2_backend_change_summary.md  v1_2_multi_source_control_handoff.md  v1_3_soc_protection_control_logic.md  v1_4_soc_only_field_control.md  v1_8_transition_aware_soc_solis.md  v1_9_lower_cutoff_control.md
northbound_ems_gateway/scripts/: dump_raw_registers.py  generate_register_map.py  scan_float_order.py  test_modbus_connection.py  validate_register_map.py
northbound_ems_gateway/tools/: control_cli.py  generate_password_hash.py  soc_only_controller.py
(+543 files in other folders)
