[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northbound-ems-gateway"
version = "0.3.0"
description = "Read-only NorthBound EMS Bridge with asset API, local historian, and HTTPS REST server upload"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "openpyxl>=3.1",
  "pymodbus>=3.6",
  "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["src"]
