[project]
name = "northbound-ems-gateway"
version = "0.5.0"
description = "Read-only NorthBound EMS Gateway with APIs, server upload, filtered logging, and SD-card-safe storage protection"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pymodbus>=3.6",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
