[project]
name = "northbound-ems-gateway"
version = "0.8.0"
description = "NorthBound EMS Gateway with multi-source Modbus TCP polling and internal control APIs"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pymodbus>=3.6",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
